--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,14 +1,49 @@
-body {
-    background-color:#f6f6f6;
-}
-footer {
-   position:fixed;
-   bottom:0;
-   width:100%;
-   height:60px;   /* Height of the footer */
-   background:#6cf;
+#main-div {
+    
 }
 
-.mdiv {
-    width: 400px;
+#nav-div {
+    
+}
+
+#content-div {
+    
+}
+
+#footer-div {
+
+}
+
+.navbar {
+    border-radius: 0px;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+    min-height:40px !important;
+}
+
+.navbar-brand {
+    padding-top: 5px;
+    height: 40px;
+}
+
+.navbar-nav > li > a {
+    padding-top:10px !important; 
+    padding-bottom:0 !important;
+    height: 40px;
+}
+
+.navbar-right {
+    margin-right: 0px;
+    height: 40px;
+}
+
+.navbar-text {
+    padding-top:0px !important; 
+    padding-bottom:0px !important;
+    margin-top: 10px;
+}
+
+.display-name {
+    color : #66afe9;
+    font-style: italic;
 }
