--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -60,7 +60,8 @@
     margin: 0 auto;
 }
 
-#additem-form {
+#additem-form, #updateitem-form, #additemcategory-form,
+#updateitemcategory-form, #additemprice-form, #updateitemprice-form {
     width: 600px;
     margin: 0 auto;
 }
