--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -60,9 +60,9 @@
     margin: 0 auto;
 }
 
-#additem-form, #updateitem-form, #additemcategory-form,#addbill-form
+#additem-form, #updateitem-form, #additemcategory-form,
 #updateitemcategory-form, #additemprice-form, #updateitemprice-form,
-#addstockitem-form, #editstockitem-form, #addbill-form {
+#addstockitem-form, #updatestockitem-form, #addbill-form {
     width: 600px;
     margin: 0 auto;
 }
