Add Bill form modified

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -62,7 +62,7 @@
 
 #additem-form, #updateitem-form, #additemcategory-form,
 #updateitemcategory-form, #additemprice-form, #updateitemprice-form,
-#addstockitem-form, #updatestockitem-form, #addbill-form {
+#addstockitem-form, #updatestockitem-form {
     width: 600px;
     margin: 0 auto;
 }
